--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@babel/core": "^7.0.0-0",
+    "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
+    "jest": "^29.3.1",
+    "node-notifier": "^10.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:jest": "jest"
   },
   "devDependencies": {
     "react-scripts": "latest"
